sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:8: error: Int does not take parameters
      ecart=(ecart/2)toInt
                     ^